--- a/package.json
+++ b/package.json
@@ -9,15 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
+    "@types/antd": "^1.0.0",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/socket.io-client": "^3.0.0",
+    "antd": "^5.9.0",
     "autoprefixer": "10.4.15",
+    "bufferutil": "^4.0.7",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
+    "firebase": "^10.5.0",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-big-calendar": "^1.8.2",
     "react-dom": "18.2.0",
+    "react-highlight-words": "^0.20.0",
+    "react-hook-form": "^7.46.1",
+    "react-icons": "^4.11.0",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "utf-8-validate": "^6.0.3",
+    "ws": "^8.14.1",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@types/react-highlight-words": "^0.16.7"
   }
 }
